[gd_scene load_steps=7 format=3 uid="uid://dvk7lj6scbkua"]

[ext_resource type="Script" path="res://assets/interactables/lighting/desk_lamp/desk_lamp.gd" id="1_34jvg"]
[ext_resource type="PackedScene" uid="uid://1chml3bhax67" path="res://resources/blend_files/lighting/desk lamp/desk_lamp.blend" id="1_obpfm"]
[ext_resource type="AudioStream" uid="uid://cunkiufugcx45" path="res://resources/sounds/sfx/UI_Press_1.ogg" id="2_7f3yd"]
[ext_resource type="AudioStream" uid="uid://k83gx0uahnyt" path="res://resources/sounds/sfx/UI_Press_2.ogg" id="3_bejmf"]
[ext_resource type="Script" path="res://assets/interactables/interaction_volume.gd" id="3_kcpyh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vojd3"]
height = 0.1
radius = 0.15

[node name="DeskLamp" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00030601, 0.00128841, -0.00145835)
script = ExtResource("1_34jvg")
on_sound = ExtResource("2_7f3yd")
off_sound = ExtResource("3_bejmf")

[node name="desk_lamp" parent="." instance=ExtResource("1_obpfm")]

[node name="DeskLampLight" type="SpotLight3D" parent="."]
transform = Transform3D(0.984808, -0.173648, -7.08332e-08, -0.133022, -0.754407, 0.642788, -0.111619, -0.633022, -0.766044, -0.00519574, 0.397756, 0.232121)
light_energy = 10.0
shadow_enabled = true

[node name="InteractionVolume" type="Area3D" parent="."]
script = ExtResource("3_kcpyh")
interaction_text = "Toggle Lamp"

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionVolume"]
shape = SubResource("CylinderShape3D_vojd3")

[connection signal="interacted" from="InteractionVolume" to="." method="_on_interaction_volume_interacted"]
